change response status codes in post policy and schema methods
