# api-docs/api/swagger/swagger.yaml
@@ -1880,7 +1880,7 @@ paths:
             schema:
               $ref: '#/components/schemas/PolicyConfig'
       responses:
-        200:
+        201:
           description: Successful operation.
         401:
           description: Unauthorized.
@@ -2415,7 +2415,7 @@ paths:
             schema:
               $ref: "#/components/schemas/ExternalData"
       responses:
-        201:
+        200:
           description: Successful operation.
         500:
           description: Internal server error.
@@ -2503,7 +2503,7 @@ paths:
       security:
       - bearerAuth: []
       responses:
-        200:
+        201:
           description: Successful operation.
           content:
             application/json:
